data/all_generated_tests/raw_wast_tests/if_IncorrectConditionEvaluation_1719.wast
;; 10. **Test Description**:     - **Test Name**: StackManagementVerification     - **Test Goal**: Check if stack management adheres to correct condition evaluations and branches.     - **Specific Constraint**: Proper handling of stack type based on `if` condition evaluation.     - **Relation to Incorrect Condition Evaluation**: Ensures stack is unwound or maintained according to condition's true/false evaluation output.

(assert_invalid
  (module (func $stack-management-verification (result i32)
    (i32.const 1)
    (if (result i32)
      (then (i32.const 2) (i32.const 3) (drop))
      (else (i32.const 4))
    )
  ))
  "type mismatch"
)